最初の準備

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>Movies</title>
+        <title>MoviesCollections</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
+
+    <header>
+        <h1>MoviesCollections</h1>
+    </header>
     <body>
-        Hello
+        <div id="mo-co">
+            Hello
+        </div>
+     <!-- Vue.js -->
+     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+     <script src="./main.js"></script>
     </body>
 </html>
