--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <option value="loveromance">ラブロマンス</option>
                     <option value="sfFantasy">SF・ファンタジー</option>
                     <option value="anime">アニメ</option>
-                </select>
+                </select><br>
+                <star-rating v-model="rating" star-size="35"></star-rating>
                 <button @click="addMovie">Add</button>
             </p>
 
@@ -33,14 +34,16 @@
             <label><input type="radio" v-model="newCategory" value="sfFantasy"><span>SF・ファンタジー</span></label>
             <label><input type="radio" v-model="newCategory" value="anime"><span>アニメ</span></label>
             </div>
-            
-            <br>
             <li v-for="movie in filterByCategory" :key="movie.id">
-                <span>{{ movie.id }}{{ movie.title }}{{ movie.memo }}{{ movie.category }}</span>
+                <span>TITLE:{{ movie.title }} CATEGORY:{{ movie.category }} 評価★{{ movie.star }}<br>
+                      MEMO:{{ movie.memo }}</span>
                 <button @click="DeleteMovies(movie)">Delete</button>
             </li>
 
         </div>
+    
+    <!-- star-raiting -->
+    <script src="https://unpkg.com/vue-star-rating/dist/VueStarRating.umd.min.js"></script>
      <!-- Vue.js -->
      <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
      <script src="./main.js"></script>
