--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
             <label><input type="radio" v-model="newCategory" value="loveromance"><span>ラブロマンス</span></label>
             <label><input type="radio" v-model="newCategory" value="sfFantasy"><span>SF・ファンタジー</span></label>
             <label><input type="radio" v-model="newCategory" value="anime"><span>アニメ</span></label>
-            </div>
+            </div><br>
+
+            <button @click="titleSort" class="SORT">TitleSort</button>
+            <button @click="newAddSort" class="SORT">New</button>
+            <button @click="oldAddSort" class="SORT">Old</button>
+
             <li v-for="movie in filterByCategory" :key="movie.id">
                 <span>TITLE:{{ movie.title }} CATEGORY:{{ movie.category }} 評価★{{ movie.star }}<br>
                       MEMO:{{ movie.memo }}</span>
