装飾.大文字小文字の変更

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <div id="mo-co">
             <p class="boxA">
-                Day <input type="date" v-model="newDate" class="new"><br>
-                newTitle <input type="text" v-model="newTitle" class="new"><br>
-                newMemo <input type="text" v-model="newMemo" class="new"><br>
+                Date <input type="date" v-model="newDate" class="new"><br>
+                NewTitle <input type="text" v-model="newTitle" class="new"><br>
+                NewMemo <input type="text" v-model="newMemo" class="new"><br>
                 Category <select name="categorys" v-model="newCategory" id="selectCategorys" class="new">
                     <option value="">カテゴリーを選択</option>
                     <option value="action">アクション</option>
