--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                   </li>
               </div>
 
-               <div v-on:click="watchLeft">グラフを表示</div>
+               <div v-on:click="watchChart">グラフを表示</div>
                <div v-on:click="watchRight">右の画面にいく</div>
           </div>
                 
                  
-          <div v-if="left" key="left">
+          <div v-if="chart" key="chart">
           <p>グラフを表示</p>
           <bar-chart></bar-chart>
           </li>
@@ -66,7 +66,7 @@
           <div v-if="right" key="right">
           <p>右の画面</p>
           <div v-on:click="watchHome">HOMEに戻る</div>
-          <div v-on:click="watchLeft">グラフを表示</div>
+          <div v-on:click="watchChart">グラフを表示</div>
           </div>
 
         </div>
