--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <title>MoviesCollections</title>
         <link rel="stylesheet" href="./style.css">
+
+        <link rel="icon" href="映画のカチンコのアイコン 1.png">
+        <link rel="icon" href="映画のカチンコのアイコン 1 (2).png">
+        <link rel="icon" href="映画のカチンコのアイコン 1 (1).png">
     </head>
 
     <header>
