--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>MoviesCollections</title>
         <link rel="stylesheet" href="./style.css">
-
+        
+        <!--favicon -->
         <link rel="icon" href="映画のカチンコのアイコン 1.png">
         <link rel="icon" href="映画のカチンコのアイコン 1 (2).png">
         <link rel="icon" href="映画のカチンコのアイコン 1 (1).png">
